--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "name": "Berk Altıok - Front-End Developer",
+  "name": "Oğuz Kaan Özsoy - Full Stack Developer",
   "description": "10 yılı aşkın sektörel deneyimimle bir çok projede yer aldım ve yaptım. Remote çalışma düzenim ve profesyonel iş anlayışım ile Front-End geliştiriciliği yapmaktayım. Kaliteli bir Front-End kodlaması istiyorsanız doğru adrestesiniz.",
-  "short_name": "Berk Altıok",
+  "short_name": "Oğuz Kaan Özsoy",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#FFFFFF",
@@ -9,14 +9,14 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://avatars2.githubusercontent.com/u/17373485",
+      "src": "https://avatars.githubusercontent.com/u/51211384?v=4",
       "sizes": "460x460",
       "type": "image/png"
     }
   ],
   "about": {
     "top": {
-      "avatar": "https://avatars2.githubusercontent.com/u/17373485",
+      "avatar": "assets/images/pp.jpeg",
       "buttons": [
         {
           "url": "https://github.com/berkaltiok/berkaltiok.github.io",
@@ -31,9 +31,9 @@
       ]
     },
     "content": {
-      "title": "I’m Berk,",
-      "subtitle": "Front End Developer, from Ankara.",
-      "info": "Çizilmiş bir arayüz tasarımını kodlamaktan zevk alıyorum. Alanında önemli şirketlerden start-up projelerine kadar geniş bir müşteri yelpazesi için profesyonel kodlama hizmeti sunuyorum. Mobil, tarayıcı, performans odaklı arayüz kodlamada, birebir CSS dökümünde  ve bir çok FrontEnd konusunda uzmanım."
+      "title": "I’m Oğuz,",
+      "subtitle": "Full Stack Developer, from Ankara.",
+      "info": "Bir çok yazılım dili biliyorum, Yazımlım geliştirme, Oyun Dizaynı, Siber ve Yapay zeka üzerine tecrübelerim var."
     },
 
     "social": [
@@ -244,7 +244,7 @@
     }
   ],
   "footer": {
-    "copy": "Berk Altıok",
+    "copy": "Oğuz Kaan Özsoy",
     "links": [
       {"url": "https://berk.pw", "text": "Blog"},
       {"url": "https://github.com/berkaltiok", "text": "Github"}
